--- a/test.html
+++ b/test.html
@@ -37,17 +37,29 @@
         }
 
         .voverlay {
-            width: auto;
+            width: 100%;
             height: 100vh;
             overflow: hidden;
             display: flex;
             align-items: center;
-
+            z-index: 1;
         }
     </style>
 </head>
 
 <body>
+        <!-- Preloader Start -->
+        <div id="preloader-active">
+            <div class="preloader d-flex align-items-center justify-content-center">
+                <div class="preloader-inner position-relative">
+                    <div class="preloader-circle"></div>
+                    <div class="preloader-img pere-text">
+                        <img src="assets/img/logo/loder-logo.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Preloader Start -->
     <header>
         <!-- Header Start -->
         <div class="header-area header-transparent">
@@ -121,7 +133,7 @@
         <div class="slider-area">
             <video id="background-video" autoplay loop muted poster="https://assets.codepen.io/6093409/river.jpg">
                 <source src="assets/video/vid.mp4" type="video/mp4"
-                    class="single-slider hero-overly slider-height d-flex align-items-center" />
+                    class="single-slider slider-height d-flex align-items-center" />
             </video>
             <div class="voverlay hero-overly">
                 <div class="container">
